--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,22 @@ local
 cache
 figure
 *.synctex.gz
+*.old
+
+02/*
+03/*
+04/*
+05/*
+06/*
+07/*
+08/*
+09/*
+10/*
+11/*
+12/*
+13/*
+14/*
+15/*
+16/*
+17/*
+18/*
