Worked on Chapter 1 slides

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,16 @@ figure
 16/*
 17/*
 18/*
+
+hw00/*
+hw01/*
+hw02/*
+hw03/*
+hw04/*
+hw05/*
+hw06/*
+hw07/*
+hw08/*
+*-concordance.tex
+
+.Rhistory
